syntax = "proto3";

option csharp_namespace = "Invite.Apollo.App.Graph.Common.Models.Assessments";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

package shared;

// this enum defines the different assessment types
enum AssessmentType {
    UNKNOWN = 0;
    SK = 1;
    EA = 2;
    // Softskill
    SO = 3;
    GL = 4;
    BE = 5;
}

// this enum defines the different assessment score quantities
  enum AssessmentScoreQuantity {
    Undefined = 0;
    Over = 1;
    Median = 2;
    Under = 3;
}  

message AssessmentsRequest {
  // Name to say hello to.
  string CorrelationId = 1;
}

message AssessmentsResponse {
  // Name to say hello to.
  string CorrelationId = 1;

  repeated Assessment assessments = 2;
}

message Assessment {
  // The uniqe Identifier of the Assessment
  int64 Id = 1;
  
  // The Title of the Assessment
  string Title = 2;
  
  string Subtitle = 3;
  // The Description of the Assessment
  string Description = 4;
  // The Language of the Assessment
  string Language = 5;
  // The Estimate Duration how long it takes to do the assessment
  int32 EstimateDuration = 6;
  // Indicates whetere this assessment is doable by a registered user only
  bool MemberOnly = 7;
  // The Version of the assessment
  string Ticks = 8;
  // Indicates if the assessment is repeatable after a certain amount of time if null or 0 it can be done immediately
  google.protobuf.Int32Value Repeatable = 9;

  // Indicates the type of Assessment
  AssessmentType Type = 10;
  
  // Incdicates the Languages a assessment is available in
  repeated string Languages = 11;
  
  //Indidcates if the Assessment is Deleted
  bool Deleted = 12;
  
  //Grouping of the Assessment
  google.protobuf.StringValue Grouping = 13;

  //Because Favorites suck!
  repeated google.protobuf.StringValue ModuleIds = 14;
}

// The request message containing the user's name.
message AssessmentTileRequest {
  // Name to say hello to.
  string CorrelationId = 1;
  // The Id of the Assessment you are looking for this field is optional
  repeated google.protobuf.StringValue AssessmentIds = 2;
}

// The response message containing the greetings.
message AssessmentTilesResponse {
  // A list of Assessments
  repeated AssessmentTile assessments = 1;
  // The Clients Session Id
  string CorrelationId = 2;
}

// The Assessment aka Booklet
message AssessmentTile {
  // The uniqe Identifier of the assessment
  string AssessmentId = 1;
  
  // The Title of the assessment
  string Title = 2;
  
  string Subtitle = 3;
  // The Description of the assessment
  string Description = 4;
  // The Language of the assessment
  string Language = 5;
  // The Estimate Duration how long it takes to do the assessment
  int32 EstimateDuration = 6;
  // Indicates whetere this assessment is doable by a registered user only
  bool MemberOnly = 7;
  // The Version of the assessment
  string Ticks = 8;
  // Indicates if the assessment is repeatable after a certain amount of time if null or 0 it can be done immediately
  google.protobuf.Int32Value Repeatable = 9;
  
  // Indicates the type of assessment
  AssessmentType Type = 10;
  
  // Incdicates the Languages a assessment is available in
  repeated string Languages = 11;
  
  //Indidcates if the assessment is deleted
  bool Deleted = 12;
  
  //Grouping of the assessment
  google.protobuf.StringValue Grouping = 13;

  //Because Favorites suck!
  repeated google.protobuf.StringValue ModuleIds = 14;

  repeated AssessmentScore AssessmentScores = 15;
}

// The request message containing the user's name.
message ModuleTilesRequest {
  // Name to say hello to.
  string CorrelationId = 1;
  // The Ids of the Modules you are looking for
  repeated google.protobuf.StringValue ModuleIds = 2;
}

// The response message containing the greetings.
message ModuleTilesResponse {
  // A list of Modules
  repeated ModuleTile modules = 1;
  // The Clients Session Id
  string CorrelationId = 2;
}

// The Module
message ModuleTile {
  // The uniqe Identifier of the Assessment
  string AssessmentId = 1;
  
  // The Title of the module
  string Title = 2;

  // The Version of the module
  string Ticks = 3;

  // Indicates if the Module is repeatable after a certain amount of time if null or 0 it can be done immediately
  google.protobuf.Int32Value Repeatable = 4;
  
  // Indicates the type of module
  AssessmentType Type = 5;
  
  //Indidcates if the Module is Deleted
  bool Deleted = 6;

  //Because Favorites suck!
  google.protobuf.StringValue ModuleId = 7;

  // The Score of the Module
  repeated AssessmentScore AssessmentScores = 8;

  // Indicates whetere this Module is doable by a registered user only
  bool MemberOnly = 9;
}

message AssessmentScore {
  google.protobuf.StringValue ProfileId = 1;
  google.protobuf.StringValue AssessmentId = 2;
  google.protobuf.StringValue ModuleId = 3;
  google.protobuf.DoubleValue Result = 5;
  string Segment = 6;
  AssessmentScoreQuantity Quantity = 7;

  //it only applies to SO 
  google.protobuf.StringValue ResultDescription = 8;
}

message ModulesRequest {
  repeated google.protobuf.StringValue AssessmentIds = 1;
  repeated google.protobuf.StringValue ModuleIds = 2;
  string Language = 3;
}

message ModulesResponse {
  repeated Module modules = 1;
  string CorrelationId = 2;
}

message ModuleRequest{
  string AssessmentId = 1;
  string ModuleId = 2;
  string CorrelationId = 3;
}

message ModuleResponse {
  Module Module = 1;
  string CorrelationId = 2;
}

message Module {
  // The uniqe Identifier of the Assessment
  string AssessmentId = 1;
  
  // The Title of the module
  string Title = 2;
  
  // The Subtitle of the module
  string Subtitle = 3;

  // The Description of the module
  string Description = 4;

  // The Language of the module
  string Language = 5;

  // The Estimate Duration how long it takes to do the module
  int32 EstimateDuration = 6;

  // Indicates whetere this module is doable by a registered user only
  bool MemberOnly = 7;

  // The Version of the module
  string Ticks = 8;

  // Indicates if the module is repeatable after a certain amount of time if null or 0 it can be done immediately
  google.protobuf.Int32Value Repeatable = 9;

  // Indicates the type of Assessment
  AssessmentType Type = 10;
  
  // Incdicates the Languages a assessment is available in
  repeated string Languages = 11;
  
  //Indidcates if the module is deleted
  bool Deleted = 12;

  //Because Favorites suck!
  google.protobuf.StringValue ModuleId = 13;
}


message AssessmentSession {
  //SessionID
  //Assessment
  //Modules
  //LIST ITEMS
}

message Answer {
  //ProfilId
  //SessionId
  //AssesmentId
  //ModuleId
  //ItemId
  //double answer score case SO selected Index
}
    
message RawModule {
    //ModuleId
    //repeated string 
}
    
message RawData {
        
}

